Modernize the codebase and simplify command error paths
Adopt `var` for local variables throughout, replace nested
Math.max/Math.min pairs with Math.clamp, and drop braces from
single-statement guards.

Commands now report failures by throwing CommandSyntaxException
instead of returning 0 after a manual message, so requirePlayer and
the new camera(ctx, player) lookup collapse the repeated null-check
blocks that opened almost every subcommand.

Permission nodes derive from a new Izomap.PLUGIN_ID constant.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>